2003-09-03  Paul Eggert  <eggert@twinsun.com>

	* getdate.y (relative_time_table): Use tDAY_UNIT for "tomorrow",
	"yesterday", "today", and "now" rather than tMINUTE_UNIT.  Of
	course with correspondingly smaller numbers for tomorrow and
	yesterday.  From Tadayoshi Funaba.  Originally installed into
	sh-utils on 1999-08-07, but the patch got lost (I guess during the
	coreutils merge?).

2003-08-31  Simon Josefsson  <jas@extundo.com>

	* timegm.h: New file.
	* timegm.c: New file.  Based on wget-1.8.2/src/http.c:mktime_from_utc.

2003-08-31  Karl Berry  <karl@gnu.org>

	* argp.h: update from libc.

2003-08-28  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: Undefine O_BINARY before defining it. This avoids a
	warning on QNX, which defines O_BINARY to 000000.

2003-08-24  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: Include <stdio.h>, to avoid a compilation error when
	MSVC7 <stdio.h> is included later.

2003-08-20  Bruno Haible  <bruno@clisp.org>

	* progname.h: New file, from GNU gettext.
	* progname.c: New file, from GNU gettext.
	* progreloc.c: New file, from GNU gettext.

2003-08-19  Bruno Haible  <bruno@clisp.org>

	* xstrdup.c: Assume <string.h> exists.

2003-08-18  Jim Meyering  <jim@meyering.net>

	* setenv.h: Indent nested cpp directive.
	* vasnprintf.c: Remove trailing blanks.

2003-08-17  Simon Josefsson  <jas@extundo.com>
	    Bruno Haible  <bruno@clisp.org>

	* xstrndup.h: New file.
	* xstrndup.c: New file.

2003-08-17  Bruno Haible  <bruno@clisp.org>

	* strndup.h: New file.

2003-08-16  Paul Eggert  <eggert@twinsun.com>

	* regex.h, strdup.c, strtoll.c, strtoul.c: Do not normalize white
	space, undoing this 2003-08-12 change:
	<http://mail.gnu.org/archive/html/bug-gnulib/2003-08/msg00080.html>

2003-08-16  Jim Meyering  <jim@meyering.net>

	Merge from coreutils.
	* xstrtoimax.c: #else #if -> #elif.
	* xstrtoumax.c: Likewise.

2003-08-15  Paul Eggert  <eggert@twinsun.com>

	* config.charset, ref-add.sin, ref-del.sin: Use three spaces,