@@ -1,5 +1,9 @@
 2003-09-03  Paul Eggert  <eggert@twinsun.com>
 
+	* human.c (human_readable): Fix bug that rounded 10501 to 10k.
+	Bug reported by Lute Kamstra in
+	<http://mail.gnu.org/archive/html/bug-gnulib/2003-09/msg00003.html>.
+
 	* getdate.y (relative_time_table): Use tDAY_UNIT for "tomorrow",
 	"yesterday", "today", and "now" rather than tMINUTE_UNIT.  Of
 	course with correspondingly smaller numbers for tomorrow and
